Add post creation functionality

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,9 @@
 <body>
     <header class="page-header">
         <div class="container">
+            <a href="{% url 'post_new' %}" class="top-menu">
+                {% include './icons/manage.svg' %}
+            </a>
             <h1><a href="/">Aarjav's Blog</a></h1>
         </div>
     </header>
