--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,9 +13,11 @@
 <body>
     <header class="page-header">
         <div class="container">
+            {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu">
                 {% include './icons/manage.svg' %}
             </a>
+            {% endif %}
             <h1><a href="/">Aarjav's Blog</a></h1>
         </div>
     </header>
